<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_curtir"
        android:title="@string/like"
        android:icon="@drawable/ic_heart_outline"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favoritar"
        android:title="@string/favorites"
        android:icon="@drawable/ic_bookmark_outline"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_editar"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="never"
        android:visible="false" />

    <item
        android:id="@+id/action_excluir"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never"
        android:visible="false" />

</menu>
